Sat Jun  8 00:37:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (validate_integer_pack_format): Renamed from
	  validate_integer_format.
	  (integer_pack_loop_setup): Renamed from integer_format_loop_setup.
	  (integer_pack_fill_dd): Renamed from int_export_fill_dd.
	  (integer_pack_take_lowbits): Renamed from int_export_take_lowbits.
	  (integer_unpack_push_bits): Renamed from int_import_push_bits.

Fri Jun  7 23:58:06 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_pack): Arguments changed.  Use flags to
	  specify word order and byte order.
	  (rb_integer_unpack): Ditto.
	  (validate_integer_format): Follow the above change.
	  (integer_format_loop_setup): Ditto.

	* pack.c: Ditto.

	* internal.h: Ditto.
	  (INTEGER_PACK_MSWORD_FIRST): Defined.
	  (INTEGER_PACK_LSWORD_FIRST): Ditto.
	  (INTEGER_PACK_MSBYTE_FIRST): Ditto.
	  (INTEGER_PACK_LSBYTE_FIRST): Ditto.
	  (INTEGER_PACK_NATIVE_BYTE_ORDER): Ditto.
	  (INTEGER_PACK_LITTLE_ENDIAN): Ditto.
	  (INTEGER_PACK_BIG_ENDIAN): Ditto.

Fri Jun  7 22:10:50 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rubygems/specification.rb (Gem::Specification#to_yaml):
	  use Gem::NoAliasYAMLTree.create instead of Gem::NoAliasYAMLTree.new
	  to suppress deprecated warnings.

Fri Jun  7 21:39:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_integer_pack): Renamed from rb_int_export.
	  (rb_integer_unpack): Renamed from rb_int_import.

	* internal.h, pack.c: Follow the above change.

Fri Jun  7 21:05:26 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (integer_format_loop_setup): Extracted from rb_int_export
	  and rb_int_import.

Fri Jun  7 19:48:38 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (validate_integer_format): Extracted from rb_int_export and
	  rb_int_import.

Fri Jun  7 19:23:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_absint_size): Use numberof.
	  (rb_int_export): Ditto.

Fri Jun  7 18:58:56 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (numberof): Gathered from various files.
